fixed task-list-header overflow

--- a/frontend/src/scss/blocks/_main.scss
+++ b/frontend/src/scss/blocks/_main.scss
@@ -100,6 +100,8 @@
   position: sticky;
   top: 0;
 
+  z-index: 1;
+
   background-color: $background-primary-color;
 
   .task-list-header-content {
@@ -120,6 +122,8 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+
+  z-index: 0;
 
   .add-task-form {
     position: relative;
